Generate coverage reports for all unit and build tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ jobs:
     - python: '2.7'
       os: linux
       language: python
-      env: [ TEST_SUITE=unit, COVERAGE=true ]
+      env: TEST_SUITE=unit
     - python: '3.3'
       os: linux
       language: python
@@ -50,13 +50,13 @@ jobs:
     - python: '3.6'
       os: linux
       language: python
-      env: [ TEST_SUITE=unit, COVERAGE=true ]
+      env: TEST_SUITE=unit
     - python: '3.7'
       os: linux
       dist: xenial
       sudo: true
       language: python
-      env: [ TEST_SUITE=unit, COVERAGE=true ]
+      env: TEST_SUITE=unit
     - python: '3.6'
       os: linux
       language: python
@@ -64,48 +64,48 @@ jobs:
     - stage: 'unit tests - osx'
       os: osx
       language: generic
-      env: [ TEST_SUITE=unit, PYTHON_VERSION=2.7, COVERAGE=true ]
+      env: [ TEST_SUITE=unit, PYTHON_VERSION=2.7 ]
 # mpich (AutotoolsPackage)
     - stage: 'build tests'
       python: '2.7'
       os: linux
       language: python
-      env: [ TEST_SUITE=build, COVERAGE=true, 'SPEC=mpich' ]
+      env: [ TEST_SUITE=build, 'SPEC=mpich' ]
 # astyle (MakefilePackage)
     - python: '2.7'
       os: linux
       language: python
-      env: [ TEST_SUITE=build, COVERAGE=true, 'SPEC=astyle' ]
+      env: [ TEST_SUITE=build, 'SPEC=astyle' ]
 # tut (WafPackage)
     - python: '2.7'
       os: linux
       language: python
-      env: [ TEST_SUITE=build, COVERAGE=true, 'SPEC=tut' ]
+      env: [ TEST_SUITE=build, 'SPEC=tut' ]
 # py-setuptools (PythonPackage)
     - python: '2.7'
       os: linux
       language: python
-      env: [ TEST_SUITE=build, COVERAGE=true, 'SPEC=py-setuptools' ]
+      env: [ TEST_SUITE=build, 'SPEC=py-setuptools' ]
 # perl-dbi (PerlPackage)
 #    - python: '2.7'
 #      os: linux
 #      language: python
-#      env: [ TEST_SUITE=build, COVERAGE=true, 'SPEC=perl-dbi' ]
+#      env: [ TEST_SUITE=build, 'SPEC=perl-dbi' ]
 # openjpeg (CMakePackage + external cmake)
     - python: '2.7'
       os: linux
       language: python
-      env: [ TEST_SUITE=build, COVERAGE=true, 'SPEC=openjpeg' ]
+      env: [ TEST_SUITE=build, 'SPEC=openjpeg' ]
 # r-rcpp (RPackage + external R)
     - python: '2.7'
       os: linux
       language: python
-      env: [ TEST_SUITE=build, COVERAGE=true, 'SPEC=r-rcpp' ]
+      env: [ TEST_SUITE=build, 'SPEC=r-rcpp' ]
 # mpich (AutotoolsPackage)
     - python: '3.6'
       os: linux
       language: python
-      env: [ TEST_SUITE=build, COVERAGE=true, 'SPEC=mpich' ]
+      env: [ TEST_SUITE=build, 'SPEC=mpich' ]
   allow_failures:
     - dist: xenial
 
@@ -179,7 +179,7 @@ before_script:
 #=============================================================================
 script:
   - share/spack/qa/run-$TEST_SUITE-tests
-  - if [[ "$COVERAGE" == "true" ]]; then codecov --env PYTHON_VERSION --required --flags "${TEST_SUITE}${TRAVIS_OS_NAME}"; fi
+  - if [[ "$TEST_SUITE" == "unit" || "$TEST_SUITE" == "build" ]]; then codecov --env PYTHON_VERSION --required --flags "${TEST_SUITE}${TRAVIS_OS_NAME}"; fi
 
 #=============================================================================
 # Notifications
