--- a/etc/spack/defaults/darwin/modules.yaml
+++ b/etc/spack/defaults/darwin/modules.yaml
@@ -14,31 +14,10 @@
 #   ~/.spack/modules.yaml
 # -------------------------------------------------------------------------
 modules:
-  enable:
-    - tcl
-    - dotkit
   prefix_inspections:
-    bin:
-      - PATH
-    man:
-      - MANPATH
-    share/man:
-      - MANPATH
-    share/aclocal:
-      - ACLOCAL_PATH
     lib:
-      - LIBRARY_PATH
+      - DYLD_LIBRARY_PATH
+      - DYLD_FALLBACK_LIBRARY_PATH
     lib64:
-      - LIBRARY_PATH
-    include:
-      - CPATH
-    lib/pkgconfig:
-      - PKG_CONFIG_PATH
-    lib64/pkgconfig:
-      - PKG_CONFIG_PATH
-    '':
-      - CMAKE_PREFIX_PATH
-
-  lmod:
-    hierarchy:
-      - mpi
+      - DYLD_LIBRARY_PATH
+      - DYLD_FALLBACK_LIBRARY_PATH
